k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: skala-chip-backend
spec:
  selector:
    app: skala-chip-backend
  ports:
    - port: 80
      targetPort: 8080
  type: ClusterIP
